# syncly

./: .dockerignore  .eslintignore  .gitignore  AWS_DEPLOYMENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
agents/: .constitution  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  health.py  main.py  pyproject.toml  requirements.txt
agents/syncly_agents/: __init__.py  health.py  settings.py
agents/syncly_agents/classification/: __init__.py  sentiment.py  status_classifier.py
agents/syncly_agents/ingestion/: __init__.py  base.py  github.py  gmail.py  google_sheets.py  jira.py  notion.py  slack.py
agents/syncly_agents/notification/: __init__.py  email_notifier.py  slack_notifier.py
agents/syncly_agents/orchestrator/: __init__.py  cli.py  pipeline.py
agents/syncly_agents/persistence/: __init__.py  models.py  supabase_repository.py
agents/syncly_agents/planning/: __init__.py  recommendation_builder.py
agents/syncly_agents/shared/: __init__.py  envelope.py  logging.py  models.py  openrouter_client.py
agents/syncly_agents/summarization/: __init__.py  digest_writer.py
agents/syncly_agents/tools/: __init__.py  cache_guidance.py
agents/tests/: conftest.py
agents/tests/fixtures/: project_status.json
agents/tests/integration/: test_workflow_success.py
agents/tests/unit/summarization/: test_digest_writer.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json  supabase.js  test-supabase.js
(+89 files in other folders)
