                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    [project]
name = "agents"
version = "0.1.0"
description = "Syncly Agent Workflow: Orchestrates summarizing and planning agents for project intelligence."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.5.0",
    "openai-agents>=0.4.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
]

[project.scripts]
syncly-agents = "syncly_agents.orchestrator.cli:main"